--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-v4:27.0.2'
-    implementation 'com.walmartlabs.ern:ElectrodeNativeShowcase-ern-container:1.0.9'
+    implementation 'com.walmartlabs.ern:ElectrodeNativeShowcase-ern-container:1.0.14'
+//    implementation ('com.walmartlabs.ern:local-container:1.0.0') {changing = true}
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
